--- a/notebook/eda.ipynb
+++ b/notebook/eda.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "138320ba",
    "metadata": {},
    "outputs": [],
@@ -340,6 +340,124 @@
    "source": [
     "# TODO : duplicate values"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbc7851f",
+   "metadata": {},
+   "source": [
+    "### Handling Null Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6e6b7cc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Comment']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.columns[df.isna().sum() > 0].to_list())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c211e02d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comment      44\n",
+      "Sentiment     0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "null_counts = df.isnull().sum()\n",
+    "print(null_counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "4977092f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# droping the rows as comment itself is null\n",
+    "df.dropna(subset=[\"Comment\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "be31d387",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 18364 entries, 0 to 18407\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   Comment    18364 non-null  object\n",
+      " 1   Sentiment  18364 non-null  object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 430.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0484f67",
+   "metadata": {},
+   "source": [
+    "### Handling duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9467f4e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "490\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.duplicated().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34573c6d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
