--- a/notebook/eda.ipynb
+++ b/notebook/eda.ipynb
@@ -453,8 +453,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "34573c6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop_duplicates(keep=\"first\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ad787e30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.duplicated().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "d3d2c132",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 17874 entries, 0 to 18407\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   Comment    17874 non-null  object\n",
+      " 1   Sentiment  17874 non-null  object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 418.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69bfb74b",
    "metadata": {},
    "outputs": [],
    "source": []
