feat: cleaning for korean dataset

--- a/notebook/korean_data.ipynb
+++ b/notebook/korean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 86,
    "id": "65ad8e65",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 87,
    "id": "415f74c9",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
        "4       1  괜찮아요. 가격 대비 양 많고... 무난한 식당이었네요. 순댓국은 푸짐한 느낌이고 ..."
       ]
      },
-     "execution_count": 50,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,8 +98,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c9748c1b",
+   "metadata": {},
+   "source": [
+    "### Rename Columns"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 88,
+   "id": "d20a18db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sentiment</th>\n",
+       "      <th>Comment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>고기가 정말 맛있었어요! 육즙이 가득 있어서 너무 좋았아요 일하시는 분들 너무 친절...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>잡내 없고 깔끔, 담백한 맛의 순댓국이 순댓국을 안 좋아하는 사람들에게도 술술 넘어...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>고기 양이 푸짐해서 특 순대국밥을 시킨 기분이 듭니다 맛도 좋습니다 다만 양념장이 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>순댓국 자체는 제가 먹어본 순대국밥집 중에서 Top5 안에는 들어요. 그러나 밥 양...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>괜찮아요. 가격 대비 양 많고... 무난한 식당이었네요. 순댓국은 푸짐한 느낌이고 ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Sentiment                                            Comment\n",
+       "0          1  고기가 정말 맛있었어요! 육즙이 가득 있어서 너무 좋았아요 일하시는 분들 너무 친절...\n",
+       "1          1  잡내 없고 깔끔, 담백한 맛의 순댓국이 순댓국을 안 좋아하는 사람들에게도 술술 넘어...\n",
+       "2          1  고기 양이 푸짐해서 특 순대국밥을 시킨 기분이 듭니다 맛도 좋습니다 다만 양념장이 ...\n",
+       "3          1  순댓국 자체는 제가 먹어본 순대국밥집 중에서 Top5 안에는 들어요. 그러나 밥 양...\n",
+       "4          1  괜찮아요. 가격 대비 양 많고... 무난한 식당이었네요. 순댓국은 푸짐한 느낌이고 ..."
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.rename(columns={\"Rating\": \"Sentiment\", \"Review\": \"Comment\"}, inplace=True)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "id": "ae7cca92",
    "metadata": {},
    "outputs": [
@@ -109,7 +197,7 @@
        "(641761, 2)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 90,
    "id": "e4e9e3cd",
    "metadata": {},
    "outputs": [
@@ -131,10 +219,10 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 641761 entries, 0 to 641760\n",
       "Data columns (total 2 columns):\n",
-      " #   Column  Non-Null Count   Dtype \n",
-      "---  ------  --------------   ----- \n",
-      " 0   Rating  641761 non-null  int64 \n",
-      " 1   Review  641761 non-null  object\n",
+      " #   Column     Non-Null Count   Dtype \n",
+      "---  ------     --------------   ----- \n",
+      " 0   Sentiment  641761 non-null  int64 \n",
+      " 1   Comment    641761 non-null  object\n",
       "dtypes: int64(1), object(1)\n",
       "memory usage: 9.8+ MB\n"
      ]
@@ -145,8 +233,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b33bfed",
+   "metadata": {},
+   "source": [
+    "### Handle Duplicates"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 91,
    "id": "cb79e971",
    "metadata": {},
    "outputs": [
@@ -164,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "781ae5ff",
    "metadata": {},
    "outputs": [
@@ -177,14 +273,13 @@
     }
    ],
    "source": [
-    "### Removing duplicates\n",
     "df = df.drop_duplicates()\n",
     "print(df.duplicated().sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 93,
    "id": "d03bb41b",
    "metadata": {},
    "outputs": [
@@ -194,7 +289,7 @@
        "(640069, 2)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,33 +300,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "904b9cbc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Rating\n",
-       "1    386865\n",
-       "2    182406\n",
-       "0     70798\n",
+       "Sentiment\n",
+       "positive    386865\n",
+       "neutral     182406\n",
+       "negative     70798\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 0 negative, 1 positive 2 neutral/ambiguous\n",
-    "df[\"Rating\"].value_counts()"
+    "sentiment_mapping = {0: \"negative\", 1 : \"positive\",  2 : \"neutral\"}\n",
+    "df[\"Sentiment\"] = df[\"Sentiment\"].replace(sentiment_mapping).astype(str)\n",
+    "df[\"Sentiment\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 95,
    "id": "63697037",
    "metadata": {},
    "outputs": [
@@ -256,34 +353,34 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Rating</th>\n",
-       "      <th>Review</th>\n",
+       "      <th>Sentiment</th>\n",
+       "      <th>Comment</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>2</td>\n",
+       "      <td>neutral</td>\n",
        "      <td>늦은 밤 찾아간 곳. 사람들로 북적북적. 맛있습니다.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>2</td>\n",
+       "      <td>neutral</td>\n",
        "      <td>주차된 차도 많고 줄 서서 먹음. 순대는 맛있으나 순댓국에 들어간 고기에서 잡내가 ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>2</td>\n",
+       "      <td>neutral</td>\n",
        "      <td>유명세에 비해 순대 맛은 그저 그런 순대 속이 그냥 당면이다</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>2</td>\n",
+       "      <td>neutral</td>\n",
        "      <td>오래되고 유명하다고 해서 가봤는데, 순댓국 맛은 보통이었어요. 직원분들이 많고 친절...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>2</td>\n",
+       "      <td>neutral</td>\n",
        "      <td>찹쌀순대 좋아해서 가는 곳, 동네에선 예전부터 유명했던 곳이다. 사실 맛이 특별하게...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -291,37 +388,37 @@
        "</div>"
       ],
       "text/plain": [
-       "    Rating                                             Review\n",
-       "8        2                     늦은 밤 찾아간 곳. 사람들로 북적북적. 맛있습니다. \n",
-       "9        2  주차된 차도 많고 줄 서서 먹음. 순대는 맛있으나 순댓국에 들어간 고기에서 잡내가 ...\n",
-       "14       2                  유명세에 비해 순대 맛은 그저 그런 순대 속이 그냥 당면이다\n",
-       "19       2  오래되고 유명하다고 해서 가봤는데, 순댓국 맛은 보통이었어요. 직원분들이 많고 친절...\n",
-       "20       2  찹쌀순대 좋아해서 가는 곳, 동네에선 예전부터 유명했던 곳이다. 사실 맛이 특별하게..."
+       "   Sentiment                                            Comment\n",
+       "8    neutral                     늦은 밤 찾아간 곳. 사람들로 북적북적. 맛있습니다. \n",
+       "9    neutral  주차된 차도 많고 줄 서서 먹음. 순대는 맛있으나 순댓국에 들어간 고기에서 잡내가 ...\n",
+       "14   neutral                  유명세에 비해 순대 맛은 그저 그런 순대 속이 그냥 당면이다\n",
+       "19   neutral  오래되고 유명하다고 해서 가봤는데, 순댓국 맛은 보통이었어요. 직원분들이 많고 친절...\n",
+       "20   neutral  찹쌀순대 좋아해서 가는 곳, 동네에선 예전부터 유명했던 곳이다. 사실 맛이 특별하게..."
       ]
      },
-     "execution_count": 59,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df[\"Rating\"] == 2].head()"
+    "df[df[\"Sentiment\"] == \"neutral\"].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 96,
    "id": "5ab7eefd",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Will not be using neutral reviews\n",
-    "df = df[df[\"Rating\"] != 2]"
+    "df = df[df[\"Sentiment\"] != \"neutral\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 97,
    "id": "6a0f53e6",
    "metadata": {},
    "outputs": [
@@ -332,11 +429,11 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 457663 entries, 0 to 641758\n",
       "Data columns (total 2 columns):\n",
-      " #   Column  Non-Null Count   Dtype \n",
-      "---  ------  --------------   ----- \n",
-      " 0   Rating  457663 non-null  int64 \n",
-      " 1   Review  457663 non-null  object\n",
-      "dtypes: int64(1), object(1)\n",
+      " #   Column     Non-Null Count   Dtype \n",
+      "---  ------     --------------   ----- \n",
+      " 0   Sentiment  457663 non-null  object\n",
+      " 1   Comment    457663 non-null  object\n",
+      "dtypes: object(2)\n",
       "memory usage: 10.5+ MB\n"
      ]
     }
@@ -347,26 +444,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 99,
    "id": "583c5ea6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Rating\n",
-       "1    386865\n",
-       "0     70798\n",
+       "Sentiment\n",
+       "positive    386865\n",
+       "negative     70798\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"Rating\"].value_counts()"
+    "df[\"Sentiment\"].value_counts()"
    ]
   },
   {
@@ -378,6 +475,199 @@
    "source": [
     "## TODO: IMBALANCED"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc63069f",
+   "metadata": {},
+   "source": [
+    "### Handle null values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "3073f97b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 8 entries, 165766 to 265794\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   Sentiment  8 non-null      object\n",
+      " 1   Comment    8 non-null      object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 192.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "df[\"Comment\"] = df[\"Comment\"].str.strip()\n",
+    "null_comments = df[df[\"Comment\"].isnull() | (df[\"Comment\"] == \"\")]\n",
+    "null_comments.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "9e80e930",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sentiment</th>\n",
+       "      <th>Comment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>165766</th>\n",
+       "      <td>positive</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190263</th>\n",
+       "      <td>positive</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191900</th>\n",
+       "      <td>negative</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>206087</th>\n",
+       "      <td>negative</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>208772</th>\n",
+       "      <td>positive</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>213611</th>\n",
+       "      <td>negative</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>229888</th>\n",
+       "      <td>positive</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>265794</th>\n",
+       "      <td>positive</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Sentiment Comment\n",
+       "165766  positive        \n",
+       "190263  positive        \n",
+       "191900  negative        \n",
+       "206087  negative        \n",
+       "208772  positive        \n",
+       "213611  negative        \n",
+       "229888  positive        \n",
+       "265794  positive        "
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "null_comments.head(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "625c99ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sentiment</th>\n",
+       "      <th>Comment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Sentiment, Comment]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df[df[\"Comment\"].notna() & (df[\"Comment\"] != \"\")]\n",
+    "df[df[\"Comment\"].isnull() | (df[\"Comment\"] == \"\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08b33159",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
