feat: add preprocessing for fasttext

--- a/notebook/preprocessing.ipynb
+++ b/notebook/preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "94e8d8b8",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "9e399272",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "41f71f6d",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "39542f3e",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "1f03489a",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
        "820871  커피 맛 괜찮아요 일행은 베이커리도 먹었는데 괜찮다고 합니다. 이 일대에서 분위기 ...  positive       ko"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,17 +207,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "793e32ee",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.int64(0)"
+       "0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "a00d3f59",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "bac01fc8",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "56b2f7d4",
    "metadata": {},
    "outputs": [],
@@ -309,19 +309,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "78afc4e6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"clean_comment\"] = df.apply(\n",
+    "df_traditional = df.copy()\n",
+    "df_traditional[\"clean_comment\"] = df_traditional.apply(\n",
     "    lambda row: preprocess_for_traditional(row[\"Comment\"], row[\"language\"]), axis=1\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "3bb6ed1c",
    "metadata": {},
    "outputs": [
@@ -408,18 +409,18 @@
        "158853                dude anyth everyth except talk wife  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df_traditional.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "9398aac7",
    "metadata": {},
    "outputs": [
@@ -510,28 +511,263 @@
     }
    ],
    "source": [
-    "df = df[[\"clean_comment\", \"Sentiment\", \"language\"]]\n",
-    "df.rename(columns={\"clean_comment\": \"Comment\", \"language\": \"Language\"}, inplace=True)\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "e9f28cf9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv(\"../data/traditional_preprocessed_data.csv\", index=False)"
+    "df_traditional = df_traditional[[\"clean_comment\", \"Sentiment\", \"language\"]]\n",
+    "df_traditional.rename(\n",
+    "    columns={\"clean_comment\": \"Comment\", \"language\": \"Language\"}, inplace=True\n",
+    ")\n",
+    "df_traditional.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e9f28cf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_traditional.to_csv(\"../data/traditional_preprocessed_data.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "611ef428",
+   "metadata": {},
+   "source": [
+    "### Preprocessing for Word2Vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "id": "3b525f1d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def preprocess_for_word_embedding(text, language):\n",
+    "    text = emoji.replace_emoji(text, replace=\"\")\n",
+    "\n",
+    "    text = text.lower()\n",
+    "    text = re.sub(r\"[^a-zA-Z0-9가-힣\\s]\", \"\", text)\n",
+    "\n",
+    "    if language == \"en\":\n",
+    "        tokens = nltk.word_tokenize(text, language=\"english\", preserve_line=True)\n",
+    "        tokens = [t for t in tokens if t not in stopwords_en]\n",
+    "    elif language == \"ko\":\n",
+    "        tokens = [word.form for word in kiwi.tokenize(text)]\n",
+    "        tokens = [t for t in tokens if t not in stopwords_kr]\n",
+    "\n",
+    "    return tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "b82c32eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_word_embedding = df.copy()\n",
+    "df_word_embedding[\"clean_comment\"] = df_word_embedding.apply(\n",
+    "    lambda row: preprocess_for_word_embedding(row[\"Comment\"], row[\"language\"]), axis=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "e76c656c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Comment</th>\n",
+       "      <th>Sentiment</th>\n",
+       "      <th>language</th>\n",
+       "      <th>clean_comment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>328712</th>\n",
+       "      <td>They should refuse to move....  Gaza is their ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>en</td>\n",
+       "      <td>[refuse, move, gaza, home]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>431204</th>\n",
+       "      <td>Where can I find the source code?</td>\n",
+       "      <td>0</td>\n",
+       "      <td>en</td>\n",
+       "      <td>[find, source, code]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>556515</th>\n",
+       "      <td>전투의 재미도 없고 모험하는 맛도 지금에서 하기에는 타 게임에 많이 밀린다. 오직 ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ko</td>\n",
+       "      <td>[전투, 재미, 없, 모험, 맛, 지금, 에서, 기, 타, 게임, 많이, 밀리, ᆫ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101150</th>\n",
+       "      <td>Newsmax\\nReal Americas Voice \\nOne America New...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>en</td>\n",
+       "      <td>[newsmax, real, americas, voice, one, america,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158853</th>\n",
+       "      <td>Dude is doing anything and everything except t...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>en</td>\n",
+       "      <td>[dude, anything, everything, except, talking, ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  Comment Sentiment language  \\\n",
+       "328712  They should refuse to move....  Gaza is their ...         0       en   \n",
+       "431204                  Where can I find the source code?         0       en   \n",
+       "556515  전투의 재미도 없고 모험하는 맛도 지금에서 하기에는 타 게임에 많이 밀린다. 오직 ...         0       ko   \n",
+       "101150  Newsmax\\nReal Americas Voice \\nOne America New...         0       en   \n",
+       "158853  Dude is doing anything and everything except t...         0       en   \n",
+       "\n",
+       "                                            clean_comment  \n",
+       "328712                         [refuse, move, gaza, home]  \n",
+       "431204                               [find, source, code]  \n",
+       "556515  [전투, 재미, 없, 모험, 맛, 지금, 에서, 기, 타, 게임, 많이, 밀리, ᆫ...  \n",
+       "101150  [newsmax, real, americas, voice, one, america,...  \n",
+       "158853  [dude, anything, everything, except, talking, ...  "
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_word_embedding.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "2c73da33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Comment</th>\n",
+       "      <th>Sentiment</th>\n",
+       "      <th>Language</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>328712</th>\n",
+       "      <td>[refuse, move, gaza, home]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>en</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>431204</th>\n",
+       "      <td>[find, source, code]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>en</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>556515</th>\n",
+       "      <td>[전투, 재미, 없, 모험, 맛, 지금, 에서, 기, 타, 게임, 많이, 밀리, ᆫ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ko</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101150</th>\n",
+       "      <td>[newsmax, real, americas, voice, one, america,...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>en</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158853</th>\n",
+       "      <td>[dude, anything, everything, except, talking, ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>en</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  Comment Sentiment Language\n",
+       "328712                         [refuse, move, gaza, home]         0       en\n",
+       "431204                               [find, source, code]         0       en\n",
+       "556515  [전투, 재미, 없, 모험, 맛, 지금, 에서, 기, 타, 게임, 많이, 밀리, ᆫ...         0       ko\n",
+       "101150  [newsmax, real, americas, voice, one, america,...         0       en\n",
+       "158853  [dude, anything, everything, except, talking, ...         0       en"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_word_embedding = df_word_embedding[[\"clean_comment\", \"Sentiment\", \"language\"]]\n",
+    "df_word_embedding.rename(\n",
+    "    columns={\"clean_comment\": \"Comment\", \"language\": \"Language\"}, inplace=True\n",
+    ")\n",
+    "df_word_embedding.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "14cd7b8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_word_embedding.to_csv(\"../data/embedding_preprocessed_data.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
