feat: reduce number of data
as my computer does not want to coorporate:

--- a/notebook/korean_data.ipynb
+++ b/notebook/korean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 1,
    "id": "65ad8e65",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 2,
    "id": "415f74c9",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
        "4       1  괜찮아요. 가격 대비 양 많고... 무난한 식당이었네요. 순댓국은 푸짐한 느낌이고 ..."
       ]
      },
-     "execution_count": 426,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 3,
    "id": "d20a18db",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
        "4          1  괜찮아요. 가격 대비 양 많고... 무난한 식당이었네요. 순댓국은 푸짐한 느낌이고 ..."
       ]
      },
-     "execution_count": 427,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 4,
    "id": "ae7cca92",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "(641761, 2)"
       ]
      },
-     "execution_count": 428,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 5,
    "id": "e4e9e3cd",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 6,
    "id": "d03bb41b",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
        "(641761, 2)"
       ]
      },
-     "execution_count": 430,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 7,
    "id": "904b9cbc",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 431,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 8,
    "id": "63697037",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
        "20   neutral  찹쌀순대 좋아해서 가는 곳, 동네에선 예전부터 유명했던 곳이다. 사실 맛이 특별하게..."
       ]
      },
-     "execution_count": 432,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 9,
    "id": "5ab7eefd",
    "metadata": {},
    "outputs": [],
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 10,
    "id": "6a0f53e6",
    "metadata": {},
    "outputs": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 11,
    "id": "583c5ea6",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 435,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 12,
    "id": "3073f97b",
    "metadata": {},
    "outputs": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 13,
    "id": "8a4f23ef",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 14,
    "id": "1d29666f",
    "metadata": {},
    "outputs": [
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 15,
    "id": "9e80e930",
    "metadata": {},
    "outputs": [
@@ -600,7 +600,7 @@
        "229888  positive        "
       ]
      },
-     "execution_count": 440,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 16,
    "id": "625c99ef",
    "metadata": {},
    "outputs": [
@@ -651,7 +651,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 441,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 17,
    "id": "08b33159",
    "metadata": {},
    "outputs": [
@@ -676,7 +676,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 442,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 18,
    "id": "7ba64fa2",
    "metadata": {},
    "outputs": [
@@ -695,19 +695,19 @@
      "data": {
       "text/plain": [
        "Sentiment\n",
-       "positive    220000\n",
-       "negative     70741\n",
+       "negative    50000\n",
+       "positive    50000\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 443,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Using 220000 rows only\n",
-    "each_class = 220000\n",
+    "# Using 50000 rows only\n",
+    "each_class = 50000\n",
     "\n",
     "df_positive = df[df[\"Sentiment\"] == \"positive\"].iloc[:each_class]\n",
     "df_negative = df[df[\"Sentiment\"] == \"negative\"].iloc[:each_class]\n",
@@ -716,6 +716,17 @@
     "df = new_df.sample(frac=1, random_state=42).reset_index(drop=True)\n",
     "\n",
     "df[\"Sentiment\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4567b2a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Will be using this much only ignore the rest below for now\n",
+    "df.to_csv(\"../data/korean_only_data.csv\", index=False)"
    ]
   },
   {
