--- a/notebook/english_data.ipynb
+++ b/notebook/english_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "9113283f",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "50ca1e58",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        "4        1  2025-01-10 19:39:03          US           2  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "0f21bf5d",
    "metadata": {},
    "outputs": [],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "453280db",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
        "4  Good person helping good people.\\nThis is how ...  Positive"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "00e1062b",
    "metadata": {},
    "outputs": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "c2dc22c7",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "d84eabc2",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "1e0b012c",
    "metadata": {},
    "outputs": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "1e4cde00",
    "metadata": {},
    "outputs": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "d7f5c598",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "d94a80bf",
    "metadata": {},
    "outputs": [
@@ -500,7 +500,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "98516b4b",
    "metadata": {},
    "outputs": [
@@ -579,7 +579,7 @@
        "4  Good person helping good people.\\nThis is how ...  Positive"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "3f7c86c3",
    "metadata": {},
    "outputs": [],
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "id": "2458f2ad",
    "metadata": {},
    "outputs": [
@@ -682,7 +682,7 @@
        "4  Good person helping good people.\\nThis is how ...  Positive       en"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "4f9f9e90",
    "metadata": {},
    "outputs": [
@@ -715,7 +715,7 @@
        "Name: count, Length: 97, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "4fe1d54d",
    "metadata": {},
    "outputs": [
@@ -736,7 +736,7 @@
        "(869421, 3)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "08983fd6",
    "metadata": {},
    "outputs": [
@@ -762,7 +762,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "c6fd5a10",
    "metadata": {},
    "outputs": [
@@ -786,7 +786,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "6414d8b2",
    "metadata": {},
    "outputs": [
@@ -807,19 +807,19 @@
      "data": {
       "text/plain": [
        "Sentiment\n",
-       "Positive    220000\n",
-       "Negative    220000\n",
+       "Negative    50000\n",
+       "Positive    50000\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Using 220000 rows only\n",
-    "each_class = 220000\n",
+    "# Using 50000 rows only\n",
+    "each_class = 50000\n",
     "\n",
     "df_positive = df[df[\"Sentiment\"] == \"Positive\"].iloc[:each_class]\n",
     "df_negative = df[df[\"Sentiment\"] == \"Negative\"].iloc[:each_class]\n",
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "id": "fb62f910",
    "metadata": {},
    "outputs": [
@@ -864,28 +864,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>What Asmon said is not contradictory, but 2 se...</td>\n",
-       "      <td>Positive</td>\n",
+       "      <td>CNN is fake news?????? They won't cover the Hu...</td>\n",
+       "      <td>Negative</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Sir, even with signed execution, when I verify...</td>\n",
+       "      <td>Russian ruble will continue to slide down, eve...</td>\n",
        "      <td>Negative</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>When I use 'git master', I receive: 'git: 'mas...</td>\n",
-       "      <td>Negative</td>\n",
+       "      <td>It doesn’t “reach the flashpoint” it rather wo...</td>\n",
+       "      <td>Positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Russiagate was bullshit? Are you sure about th...</td>\n",
+       "      <td>We would rather have Trudeau for life vs being...</td>\n",
        "      <td>Negative</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Slipper is the universal weapon of moms!!! 😂😂😂</td>\n",
-       "      <td>Positive</td>\n",
+       "      <td>President Xi needs to go.  He’s causing whole ...</td>\n",
+       "      <td>Negative</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -893,14 +893,14 @@
       ],
       "text/plain": [
        "                                             Comment Sentiment\n",
-       "0  What Asmon said is not contradictory, but 2 se...  Positive\n",
-       "1  Sir, even with signed execution, when I verify...  Negative\n",
-       "2  When I use 'git master', I receive: 'git: 'mas...  Negative\n",
-       "3  Russiagate was bullshit? Are you sure about th...  Negative\n",
-       "4     Slipper is the universal weapon of moms!!! 😂😂😂  Positive"
+       "0  CNN is fake news?????? They won't cover the Hu...  Negative\n",
+       "1  Russian ruble will continue to slide down, eve...  Negative\n",
+       "2  It doesn’t “reach the flashpoint” it rather wo...  Positive\n",
+       "3  We would rather have Trudeau for life vs being...  Negative\n",
+       "4  President Xi needs to go.  He’s causing whole ...  Negative"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "id": "20d28de4",
    "metadata": {},
    "outputs": [],
